# pyvale

./: .gitignore  .gitmodules  LICENSE  README.md  pycave-workflow.drawio  pyproject.toml
benchmarks/: cases_dictionary.yaml
data/: gmsh_2d_plate.geo  monoblock_3d_thermal.i  monoblock_thermal_out.e  monoblock_transient_thermal.i  monoblock_transient_thermal_out.e  moose_2d_thermal_basic_out.e  moose_2d_thermal_volumetric_out.e  moose_3d_thermal_volumetric_out.e  moose_thermal_volumetric_out.e  plate_2d_thermal.i  plate_2d_thermal_out.e  thermal_2d_basic.i  thermal_2d_basic_out.e  thermal_2d_volumetric.i  thermal_2d_volumetric_out.e
designspec/: pyvale_design_spec.md
dev/: dev_check.py  dev_main.py  dev_main_monoblock.py  dev_main_plate.py  dev_notes  dev_notes.md  dev_perf_test.py  dev_run_moose_thermal.py  python_coding_guide.md  pyvale_sensor_structure.drawio  run_moose_thermal_once.py
devscripts/: pyvale_sensor_structure.drawio
examples/: case01_ff_read_multi_dirs.py  case01_read_multi.py  case01_read_multi_dirs.py  case01_run_multi.py  case01_run_multi_no_err.py  case01_run_multi_noisy_sensors.py  case01_run_multi_pos_err_only.py  case01_run_multi_rand_err_only.py  case01_run_multi_set_err.py  case01_run_multi_sim_error_only.py  case01_run_multi_sys_err_only.py  ex0_test.py  ex1_1_2dthermocouples.py  ex1_1_thermocouples2d.py  ex1_2_2dthermocouples.py  ex1_2_thermocouples2d.py  ex1_2d_thermcouples.py  ex1_2d_thermocouples.py  ex2_1_3dthermocouples_monoblock.py  ex2_1_tcsmonoblock3d .py  ex2_1_tcsmonoblock3d.py  ex2_2_tcsmonoblock3d.py  ex4_1_dispsensarray2d.py  (+14 more)
(+14201 files in other folders)
