[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvale"
version = "0.0.1"
description = "A python validation engine (pyvale) for simulating sensors and measurement uncertainties on physical fields."
authors = [
  { name = "scepticalrabbit", email = "thescepticalrabbit@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: OS Independent",
]
requires-python = "==3.11.*"
dependencies = [
  "numpy>=1.26.0",
  "netCDF4>=1.6.5",
  "pyvista>=0.43.3",
  "matplotlib>=3.8",
  "scipy==1.11.3",
  "shapely>=2.0.4",
  "sympy>=1.13.0",
  "PyQT6>=6.7.1",
  "imageio>=2.36.1",
  "imageio-ffmpeg>=0.5.1",
]

[project.urls]
"Repository" = "https://github.com/Digital-Validation-Laboratory/pyvale"
"Issue Tracker" = "https://github.com/Digital-Validation-Laboratory/pyvale/issues"


[tool.setuptools.package-data]
"pyvale.data" = ["*.e","*.tiff"]
"pyvale.simcases" = ["*.i","*.geo"]

[tool.setuptools.packages.find]
where = ["src"]
